@@ -129,7 +129,7 @@ netflix.genie.server.lipstick.uuid.prop.name=lipstick.uuid.prop.name
 
 #  Email Settings
 # Enable email upon job completion
-netflix.genie.server.mail.enable=true
+netflix.genie.server.mail.enable=false
 
 # Smtp Server.
 netflix.genie.server.mail.smtp.host=localhost
