@@ -12,6 +12,7 @@ https://github.com/Netflix/genie/issues/32
 https://github.com/Netflix/genie/issues/34
 https://github.com/Netflix/genie/issues/37
 https://github.com/Netflix/genie/issues/38
+https://github.com/Netflix/genie/issues/3
 
 Bug fixes:
 https://github.com/Netflix/genie/issues/20
